<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".userinterface.AddImageActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="80dp">

        <TextView
            android:id="@+id/tvUsers"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="32dp"
            android:textColor="@color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="@string/post_as" />

        <ImageView
            android:id="@+id/imageStoryUpload"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:adjustViewBounds="true"
            app:layout_constraintEnd_toEndOf="@+id/tvUsers"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/tvUsers"
            app:layout_constraintTop_toBottomOf="@+id/tvUsers"
            app:srcCompat="@drawable/baseline_photo_24" />

        <Button
            android:id="@+id/cameraButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="44dp"
            android:backgroundTint="@color/grey"
            android:text="@string/cameraChoose"
            app:layout_constraintEnd_toStartOf="@+id/galleryButton"
            app:layout_constraintHorizontal_chainStyle="spread"
            app:layout_constraintStart_toStartOf="@+id/imageStoryUpload"
            app:layout_constraintTop_toBottomOf="@+id/imageStoryUpload" />

        <Button
            android:id="@+id/galleryButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="44dp"
            android:backgroundTint="@color/grey"
            android:text="@string/galleryChoose"
            app:layout_constraintEnd_toEndOf="@+id/imageStoryUpload"
            app:layout_constraintStart_toEndOf="@+id/cameraButton"
            app:layout_constraintTop_toBottomOf="@+id/imageStoryUpload" />

        <Button
            android:id="@+id/analyzeButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="76dp"
            android:layout_marginEnd="8dp"
            android:backgroundTint="@color/grey"
            android:text="@string/analyze"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/galleryButton" />

        <ProgressBar
            android:id="@+id/progressBarAddStory"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:theme="@style/ProgressBarStyleWhite"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="@+id/imageStoryUpload"
            app:layout_constraintEnd_toEndOf="@+id/imageStoryUpload"
            app:layout_constraintStart_toStartOf="@+id/imageStoryUpload"
            app:layout_constraintTop_toBottomOf="@+id/tvUsers" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>
